--- a/css/style.css
+++ b/css/style.css
@@ -402,9 +402,9 @@ a:hover {
 
 .navbar-b {
   transition: all .5s ease-in-out;
-  background-color: transparent;
-  padding-top: 1.563rem;
-  padding-bottom: 1.563rem;
+  background-color: #fff;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .navbar-b.navbar-reduce {
@@ -420,7 +420,7 @@ a:hover {
 
 .navbar-b.navbar-trans .nav-link,
 .navbar-b.navbar-reduce .nav-link {
-  color: #fff;
+  color: rgb(253, 153, 0);
   text-transform: uppercase;
   font-weight: 600;
 }
@@ -459,7 +459,8 @@ a:hover {
 }
 
 .navbar-b.navbar-trans .nav-link:before {
-  background-color: #fff;
+  background-color: rgb(253, 153, 0);
+  ;
 }
 
 .navbar-b.navbar-trans .nav-link:hover {
@@ -470,7 +471,7 @@ a:hover {
 .navbar-b.navbar-trans .active > .nav-link,
 .navbar-b.navbar-trans .nav-link.show,
 .navbar-b.navbar-trans .nav-link.active {
-  color: #fff;
+  color: rgb(253, 153, 0);
 }
 
 .navbar-b.navbar-reduce {
@@ -503,7 +504,7 @@ a:hover {
 }
 
 .navbar-b.navbar-reduce .navbar-toggler span {
-  background-color: #1B1B1B;
+  background-color: #ffffff;
 }
 
 .navbar-b .navbar-brand {
