--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ a:hover {
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: justify;
-  height: 100%;
+  height: auto;
 }
 .postcard .postcard__tagbox {
   display: flex;
@@ -433,6 +433,30 @@ a:hover {
 .blue .postcard__bar {
   background-color: #0076bd;
 }
+
+.blue .postcard__preview-txt a{
+  color: #0076bd;
+  font-size: large;
+  font-weight: 700;
+}
+
+.red .postcard__preview-txt a{
+  color: #bd150b;
+  font-size: large;
+  font-weight: 700;
+}
+
+.green .postcard__preview-txt a{
+  color: #79dd09;
+  font-size: large;
+  font-weight: 700;
+}
+.yellow .postcard__preview-txt a{
+  color: #bdbb49;
+  font-size: large;
+  font-weight: 700;
+}
+
 
 .blue::before {
   background-image: linear-gradient(-30deg, rgba(0, 118, 189, 0.1), transparent 50%);
@@ -843,6 +867,7 @@ p {
     min-height: auto;
     min-width: auto;
     display: flex;
+    flex: 1;
     justify-content: space-around;
     align-items: center;
     margin: 0 auto;
@@ -981,7 +1006,14 @@ p {
     height: 100px;
     width: 250px;
   }
-
+  .container-fluid1 {
+    width: 100%;
+    padding-right: 50px;
+    padding-left: 50px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
 
 
 
@@ -998,8 +1030,8 @@ p {
   .card03 {
     position: relative;
     background: #333;
-    width: 350px;
-    height: 75vh;
+    width: 450px;
+    height: 900px;
     border-radius: 6px;
     padding: 2rem;
     color: #aaa;
@@ -1034,6 +1066,10 @@ p {
     position: absolute;
     left: 0;
     top: 115px;
+  }
+
+  .from{
+    color: #00ff37;
   }
   
   @keyframes LineFadeIn {
@@ -1138,6 +1174,11 @@ p {
 
   .ecommlog {
     display: flex;
-    width: 100px;
+    width: auto;
     height: 40px;
   }
+
+  .body-paralax{
+    padding-top: 164px;
+  }
+
